moneta to database -- menu gestione -- start backup -- scheda components

--- a/coin-collector/src/styles.css
+++ b/coin-collector/src/styles.css
@@ -2,3 +2,19 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.error_snack {
+    background: #dc3545;
+}
+
+.error_snack .mat-simple-snackbar-action {
+    color: black;
+}
+
+.success_snack {
+    background: #28a745;
+}
+
+.success_snack .mat-simple-snackbar-action {
+    color: black;
+}
