--- a/coin-collector/electron/splashscreen/splashscreen.css
+++ b/coin-collector/electron/splashscreen/splashscreen.css
@@ -28,6 +28,17 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
 }
 
+#version {
+  color: white;
+  margin: 0;
+  position: absolute;
+  bottom: 5px;
+  right: 5px;
+  letter-spacing: 1px;
+  font-style: italic;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
+}
+
 #loader {
   display: block;
   width: 150px;
