--- a/coin-collector/angular-frontend/src/app/gestione/scheda/form-scheda/form-scheda.component.html
+++ b/coin-collector/angular-frontend/src/app/gestione/scheda/form-scheda/form-scheda.component.html
@@ -122,12 +122,12 @@
 
   <mat-form-field fxFlexAlign="stretch">
     <app-quantity-input formControlName="diametro" [units]="lengths" placeholder="Diametro" required></app-quantity-input>
-    <mat-error *ngIf="diametro.invalid">errore</mat-error>
+    <mat-error *ngIf="diametro.hasError('required')">Diametro è <strong>obbligatorio</strong></mat-error>
   </mat-form-field>
 
   <mat-form-field fxFlexAlign="stretch">
     <app-quantity-input formControlName="peso" [units]="weights" placeholder="Peso" required></app-quantity-input>
-    <mat-error *ngIf="peso.invalid">errore</mat-error>
+    <mat-error *ngIf="peso.hasError('required')">Peso è <strong>obbligatorio</strong></mat-error>
   </mat-form-field>
 
   <mat-form-field fxFlexAlign="stretch">
