--- a/coin-collector/angular-frontend/src/app/gestione/scheda/form-scheda/quantity-input/quantity-input.component.html
+++ b/coin-collector/angular-frontend/src/app/gestione/scheda/form-scheda/quantity-input/quantity-input.component.html
@@ -1,7 +1,7 @@
 <div [formGroup]="quantityForm" fxFlex>
-  <input fxFlex formControlName="value" type="number" placeholder="Valore" min="0">
+  <input fxFlex formControlName="value" type="number" placeholder="Valore" min="0" (blur)="onBlur()">
   <span id="space"></span>
-  <mat-select fxFlex="10" id="mat-select" formControlName="unit">
+  <mat-select fxFlex="10" id="mat-select" formControlName="unit" (blur)="onBlur()">
     <mat-option value="" selected> Unità </mat-option>
     <mat-option *ngFor="let unit of showUnits" [value]="unit">
       {{ unit }}
