Added default data

--- a/coin-collector/angular-frontend/src/app/app.component.html
+++ b/coin-collector/angular-frontend/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div fxFill fxLayout="column">
+<div fxFlexFill fxLayout="column">
 
   <mat-toolbar [color]="uiState.color || 'primary'" *ngIf="uiState && uiState.toolbar">
     <mat-toolbar-row>
